// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User profile message button test Test not present 1`] = `
<a
  className="nti-button flyout-trigger message message-button-flyout flyout-closed button primary"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  tabIndex={0}
>
  <span>
    <div
      className="icon"
    />
    <span
      className="text"
    >
      Message
    </span>
  </span>
</a>
`;

exports[`User profile message button test Test present 1`] = `
<div
  className="nti-link-to-path"
  to="#"
>
  <a
    className="nti-button message available button primary"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="icon"
    />
    <span
      className="text"
    >
      Message
    </span>
  </a>
</div>
`;
